# File-System-Database

./: .gitignore  CMakeLists.txt  README.md
File-System-Database/: mainwindow.cpp  mainwindow.h  mainwindow.ui
File-System-Database/include/Comporator/: TreeComporator.h
File-System-Database/include/Controller/: ScanController.h
File-System-Database/include/Database/: IDatabaseService.h  SQLiteDatabaseService.h
File-System-Database/include/Model/: ScanItem.h
File-System-Database/include/Scanner/: DirectoryScanner.h  IScanner.h
File-System-Database/src/Comporator/: TreeComporator.cpp
File-System-Database/src/Controller/: ScanController.cpp
File-System-Database/src/Database/: SQLiteDatabaseService.cpp
File-System-Database/src/Model/: ScannerItem.cpp
File-System-Database/src/Scanner/: DirectoryScanner.cpp
